[gd_scene load_steps=7 format=2]

[ext_resource path="res://CaviarDreams.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://conclucion1.gd" type="Script" id=2]
[ext_resource path="res://cuadro_de_texto (2).png" type="Texture" id=3]
[ext_resource path="res://decisiones2.tscn" type="PackedScene" id=4]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 1 )

[node name="conclucion1" type="CanvasLayer"]
script = ExtResource( 2 )
parte2 = ExtResource( 4 )

[node name="cuadro_de_texto (2)" type="Sprite" parent="."]
position = Vector2( 925, 850 )
scale = Vector2( 1.4, 1 )
texture = ExtResource( 3 )

[node name="julianN" type="Label" parent="."]
anchor_left = 0.066
anchor_top = 0.469
anchor_right = 0.066
anchor_bottom = 0.469
margin_left = -48.72
margin_top = 181.48
margin_right = 27.28
margin_bottom = 217.48
custom_fonts/font = SubResource( 1 )
text = "julian:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label1" type="Label" parent="."]
anchor_left = 0.077
anchor_top = 0.718
anchor_right = 0.077
anchor_bottom = 0.718
margin_left = -36.182
margin_top = 28.576
margin_right = 113.818
margin_bottom = 52.576
custom_fonts/font = SubResource( 2 )
text = "hey, como esta?"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button1" type="Button" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="juanN" type="Label" parent="."]
anchor_left = 0.066
anchor_top = 0.469
anchor_right = 0.066
anchor_bottom = 0.469
margin_left = -48.72
margin_top = 181.48
margin_right = 124.28
margin_bottom = 217.48
custom_fonts/font = SubResource( 1 )
text = "juan diengo:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="."]
anchor_left = 0.075
anchor_top = 0.724
anchor_right = 0.075
anchor_bottom = 0.724
margin_left = -33.45
margin_top = 23.968
margin_right = 400.55
margin_bottom = 74.968
custom_fonts/font = SubResource( 2 )
text = "amigo!!! acabo de aprender un nuevo lenguaje
de programacion, estoy muy emocionado."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="."]
anchor_left = 0.075
anchor_top = 0.724
anchor_right = 0.075
anchor_bottom = 0.724
margin_left = -33.45
margin_top = 23.968
margin_right = 428.55
margin_bottom = 74.968
custom_fonts/font = SubResource( 2 )
text = "que lenguaje aprendio? hace mucho no programa
no?"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttonpt2" type="Button" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Button1" to="." method="_on_Button1_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Buttonpt2" to="." method="parte_2"]
